feat: adicionado cor para o bg do side-menu

--- a/src/assets/styles/variables.scss
+++ b/src/assets/styles/variables.scss
@@ -9,6 +9,7 @@ $light-color: #f8f9fa;
 $dark-color: #343a40;
 $white-color: #ffffff;
 $black-color: #000000;
+$background-menu-color: #313a46;
 $font-size: 16px;
 $line-height: 1.5;
 $transition: all 0.2s ease-in-out;
