refactor: alterado o tamanho da logo e a cor do bg.

--- a/src/app/shared/components/sidenav-title-dashboard/sidenav-title-dashboard.component.scss
+++ b/src/app/shared/components/sidenav-title-dashboard/sidenav-title-dashboard.component.scss
@@ -5,12 +5,12 @@
 	display: flex;
 	justify-content: center;
 	align-items: center;
-	background-color: $primary-color;
+	background-color: $background-menu-color;
 	text-align: center;
 	height: 100%;
 	width: 100%;
 
 	img {
-		height: 36px;
+		height: 40px;
 	}
 }
