--- a/src/app/modules/dashboard/dashboard.component.html
+++ b/src/app/modules/dashboard/dashboard.component.html
@@ -1,4 +1,4 @@
-<div class="grid-container">
+<div class="grid-template-container">
 	<app-sidenav-title-dashboard></app-sidenav-title-dashboard>
 	<app-toolbar-dashboard></app-toolbar-dashboard>
 	<app-sidenav-dashboard></app-sidenav-dashboard>
