--- a/src/styles.scss
+++ b/src/styles.scss
@@ -12,3 +12,24 @@ body {
 	padding: 0;
 	background-color: $primary-color;
 }
+
+.grid-template-container {
+	display: grid;
+	grid-template-columns: 260px auto;
+	grid-template-rows: 70px auto;
+
+	grid-template-areas:
+		"ST TB"
+		"SN DC";
+
+	height: 100vh;
+}
+
+.grid-dashboard-content {
+	grid-area: DC;
+	display: flex;
+	flex-direction: column;
+	justify-content: space-between;
+	align-items: center;
+	background-color: white;
+}
