--- a/src/styles.scss
+++ b/src/styles.scss
@@ -7,10 +7,12 @@
 
 html,
 body {
-	height: 100%;
+	max-height: 100vh;
+	max-width: 100vw;
+	overflow: hidden;
 	margin: 0;
 	padding: 0;
-	background-color: $primary-color;
+	background-color: $secondary-color;
 }
 
 .grid-template-container {
