refactor: foi retirando o angular material e comecado a usar o tailwindcss, assim ajustando todos os arquivos para .css tambem, pois anteriormente estava como .scss

--- a/src/app/shared/components/toolbar-dashboard/toolbar-dashboard.component.html
+++ b/src/app/shared/components/toolbar-dashboard/toolbar-dashboard.component.html
@@ -5,7 +5,7 @@
 			class=""
 			aria-label="Example icon-button with menu icon"
 		>
-			<mat-icon>menu</mat-icon>
+			<!-- <mat-icon>menu</mat-icon> -->
 		</button>
 		<div class="group-header-title">
 			<h1>Dashboard</h1>
@@ -18,7 +18,7 @@
 			class="example-icon"
 			aria-label="Example icon-button with menu icon"
 		>
-			<mat-icon>notifications</mat-icon>
+			<!-- <mat-icon>notifications</mat-icon> -->
 		</button>
 
 		<!-- Theme -->
@@ -28,7 +28,7 @@
 			aria-label="Example icon-button with menu icon"
 			(click)="toggleTheme()"
 		>
-			<mat-icon>{{ isDarkTheme ? "light_mode" : "dark_mode" }}</mat-icon>
+			<!-- <mat-icon>{{ isDarkTheme ? "light_mode" : "dark_mode" }}</mat-icon> -->
 		</button>
 
 		<!-- Settings -->
@@ -37,7 +37,7 @@
 			class="example-icon"
 			aria-label="Example icon-button with menu icon"
 		>
-			<mat-icon>settings</mat-icon>
+			<!-- <mat-icon>settings</mat-icon> -->
 		</button>
 
 		<!-- Info User  -->
