--- a/src/assets/styles/variables.css
+++ b/src/assets/styles/variables.css
@@ -1,4 +1,4 @@
-//variaveis gloabais que serão usadas no projeto
+/* //variaveis gloabais que serão usadas no projeto
 $primary-color: #007bff;
 $secondary-color: #6c757d;
 $success-color: #28a745;
@@ -13,4 +13,4 @@ $background-menu-color: #313a46;
 $font-size: 16px;
 $line-height: 1.5;
 $transition: all 0.2s ease-in-out;
-$z-index: 1000;
+$z-index: 1000; */
