--- a/src/app/shared/components/button-menu/button-menu.component.css
+++ b/src/app/shared/components/button-menu/button-menu.component.css
@@ -1,5 +1,3 @@
-@import "variables";
-
 :host {
 	display: block;
 	width: 100%;
@@ -16,8 +14,8 @@
 		font-size: 14px;
 		font-weight: 600;
 		cursor: pointer;
-		background-color: $background-menu-color;
-		color: $secondary-color;
+		background-color: #313a46;
+		color: #6c757d;
 	}
 
 	span {
