--- a/src/app/shared/components/sidenav-title-dashboard/sidenav-title-dashboard.component.css
+++ b/src/app/shared/components/sidenav-title-dashboard/sidenav-title-dashboard.component.css
@@ -1,11 +1,9 @@
-@import "variables";
-
 .grid-sidenav-title {
 	grid-area: ST;
 	display: flex;
 	justify-content: center;
 	align-items: center;
-	background-color: $background-menu-color;
+	background-color: #313a46;
 	text-align: center;
 	height: 100%;
 	width: 100%;
