--- a/src/styles.css
+++ b/src/styles.css
@@ -1,5 +1,7 @@
 /* You can add global styles to this file, and also import other style files */
-@import "variables.scss";
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 
 * {
 	box-sizing: border-box;
@@ -12,7 +14,7 @@ body {
 	overflow: hidden;
 	margin: 0;
 	padding: 0;
-	background-color: $secondary-color;
+	background-color: #6c757d;
 }
 
 .grid-template-container {
