feat: utilizando agora o componente criado.

--- a/src/app/shared/components/sidenav-dashboard/sidenav-dashboard.component.html
+++ b/src/app/shared/components/sidenav-dashboard/sidenav-dashboard.component.html
@@ -1,91 +1,111 @@
-<div class="sidenav-content">
-	<app-button-menu
-		[description]="'Dashboard'"
-		[selected]="menuSelected === 'Home'"
-		(click)="onMenuSelected('Home')"
-	>
-		<!-- <mat-icon style="width: 25px; height: 25px; margin: 0 16px">
-				dashboard
-			</mat-icon> -->
-	</app-button-menu>
+<div class="grid-sidenav-container">
+	<div class="sidenav-content">
+		<app-button-menu
+			[description]="'Dashboard'"
+			[selected]="menuSelected === 'Home'"
+			(click)="onMenuSelected('Home')"
+		>
+			<app-icon
+				[src]="'/assets/images/dashboard-icon.svg'"
+				[alt]="'image dashboard'"
+				[classes]="'h-6 w-6 ml-2 mr-2'"
+			/>
+		</app-button-menu>
 
-	<app-button-menu
-		[description]="'Perfil'"
-		[selected]="menuSelected === 'Perfil'"
-		(click)="onMenuSelected('Perfil')"
-	>
-		<!-- <mat-icon style="width: 25px; height: 25px; margin: 0 16px">
-				person
-			</mat-icon> -->
-	</app-button-menu>
+		<app-button-menu
+			[description]="'Perfil'"
+			[selected]="menuSelected === 'Perfil'"
+			(click)="onMenuSelected('Perfil')"
+		>
+			<app-icon
+				[src]="'/assets/images/perfil-icon.svg'"
+				[alt]="'image perfil'"
+				[classes]="'h-6 w-6 ml-2 mr-2'"
+			/>
+		</app-button-menu>
 
-	<app-button-menu
-		[description]="'Adicionar Medicamentos'"
-		[selected]="menuSelected === 'Add Medication'"
-		(click)="onMenuSelected('Add Medication')"
-	>
-		<!-- <mat-icon style="width: 25px; height: 25px; margin: 0 16px">
-				add_circle
-			</mat-icon> -->
-	</app-button-menu>
+		<app-button-menu
+			[description]="'Adicionar Medicamentos'"
+			[selected]="menuSelected === 'Add Medication'"
+			(click)="onMenuSelected('Add Medication')"
+		>
+			<app-icon
+				[src]="'/assets/images/add-circle-icon.svg'"
+				[alt]="'image add'"
+				[classes]="'h-6 w-6 ml-2 mr-2'"
+			/>
+		</app-button-menu>
 
-	<app-button-menu
-		[description]="'Ajustar Medicamentos'"
-		[selected]="menuSelected === 'Edit Medication'"
-		(click)="onMenuSelected('Edit Medication')"
-	>
-		<!-- <mat-icon style="width: 25px; height: 25px; margin: 0 16px">
-				edit
-			</mat-icon> -->
-	</app-button-menu>
+		<app-button-menu
+			[description]="'Ajustar Medicamentos'"
+			[selected]="menuSelected === 'Edit Medication'"
+			(click)="onMenuSelected('Edit Medication')"
+		>
+			<app-icon
+				[src]="'/assets/images/edit-icon.svg'"
+				[alt]="'image edit'"
+				[classes]="'h-6 w-6 ml-2 mr-2'"
+			/>
+		</app-button-menu>
 
-	<app-button-menu
-		[description]="'Informações Gerais'"
-		[selected]="menuSelected === 'Info'"
-		(click)="onMenuSelected('Info')"
-	>
-		<!-- <mat-icon style="width: 25px; height: 25px; margin: 0 16px">
-				info
-			</mat-icon> -->
-	</app-button-menu>
+		<app-button-menu
+			[description]="'Informações Gerais'"
+			[selected]="menuSelected === 'Info'"
+			(click)="onMenuSelected('Info')"
+		>
+			<app-icon
+				[src]="'/assets/images/info-icon.svg'"
+				[alt]="'image info'"
+				[classes]="'h-6 w-6 ml-2 mr-2'"
+			/>
+		</app-button-menu>
 
-	<app-button-menu
-		[description]="'Feedback'"
-		[selected]="menuSelected === 'Feedback'"
-		(click)="onMenuSelected('Feedback')"
-	>
-		<!-- <mat-icon style="width: 25px; height: 25px; margin: 0 16px">
-				feedback
-			</mat-icon> -->
-	</app-button-menu>
+		<app-button-menu
+			[description]="'Feedback'"
+			[selected]="menuSelected === 'Feedback'"
+			(click)="onMenuSelected('Feedback')"
+		>
+			<app-icon
+				[src]="'/assets/images/feedback-icon.svg'"
+				[alt]="'image feedback'"
+				[classes]="'h-6 w-6 ml-2 mr-2'"
+			/>
+		</app-button-menu>
 
-	<app-button-menu
-		[description]="'Configurações'"
-		[selected]="menuSelected === 'Settings'"
-		(click)="onMenuSelected('Settings')"
-	>
-		<!-- <mat-icon style="width: 25px; height: 25px; margin: 0 16px">
-				settings
-			</mat-icon> -->
-	</app-button-menu>
+		<app-button-menu
+			[description]="'Configurações'"
+			[selected]="menuSelected === 'Settings'"
+			(click)="onMenuSelected('Settings')"
+		>
+			<app-icon
+				[src]="'/assets/images/settings-icon.svg'"
+				[alt]="'image settings'"
+				[classes]="'h-6 w-6 ml-2 mr-2'"
+			/>
+		</app-button-menu>
 
-	<app-button-menu
-		[description]="'Suporte'"
-		[selected]="menuSelected === 'Help'"
-		(click)="onMenuSelected('Help')"
-	>
-		<!-- <mat-icon style="width: 25px; height: 25px; margin: 0 16px">
-				help
-			</mat-icon> -->
-	</app-button-menu>
+		<app-button-menu
+			[description]="'Suporte'"
+			[selected]="menuSelected === 'Help'"
+			(click)="onMenuSelected('Help')"
+		>
+			<app-icon
+				[src]="'/assets/images/help-icon.svg'"
+				[alt]="'image help'"
+				[classes]="'h-6 w-6 ml-2 mr-2'"
+			/>
+		</app-button-menu>
 
-	<app-button-menu
-		[description]="'Sair'"
-		[selected]="menuSelected === 'Logout'"
-		(click)="onMenuSelected('Logout')"
-	>
-		<!-- <mat-icon style="width: 25px; height: 25px; margin: 0 16px">
-				logout
-			</mat-icon> -->
-	</app-button-menu>
+		<app-button-menu
+			[description]="'Sair'"
+			[selected]="menuSelected === 'Logout'"
+			(click)="onMenuSelected('Logout')"
+		>
+			<app-icon
+				[src]="'/assets/images/logout-icon.svg'"
+				[alt]="'image logout'"
+				[classes]="'h-6 w-6 ml-2 mr-2'"
+			/>
+		</app-button-menu>
+	</div>
 </div>
