--- a/src/app/shared/components/toolbar-dashboard/toolbar-dashboard.component.css
+++ b/src/app/shared/components/toolbar-dashboard/toolbar-dashboard.component.css
@@ -6,7 +6,9 @@
 	align-items: center;
 	justify-content: space-between;
 	height: 100%;
-	background-color: white;
+	background-color: #313a46;
+	color: white;
+	box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.85);
 }
 
 .toolbar-group-start {
@@ -57,7 +59,7 @@ h1 {
 	width: 50px;
 	height: 50px;
 	border-radius: 50%;
-	background-color: #313a46;
+	background-color: white;
 }
 
 .info-user-container-text {
@@ -71,11 +73,11 @@ h1 {
 }
 
 .name {
-	font-size: 14px;
+	font-size: 12px;
 	font-weight: bold;
 	margin: 0;
 }
 
 .role {
-	font-size: 14px;
+	font-size: 12px;
 }
