--- a/src/styles.css
+++ b/src/styles.css
@@ -14,7 +14,7 @@ body {
 	overflow: hidden;
 	margin: 0;
 	padding: 0;
-	background-color: #6c757d;
+	background-color: white;
 }
 
 .grid-template-container {
