feat: adicionado a logo no form.

--- a/src/app/modules/login/login.component.html
+++ b/src/app/modules/login/login.component.html
@@ -3,11 +3,16 @@
 		<img
 			class="h-full w-full"
 			src="/assets/images/medical-image-login.jpeg"
-			alt="Your Company"
+			alt="Aster Pillbox"
 		/>
 	</div>
 
 	<div class="mt-10 lg:mx-auto lg:w-full lg:max-w-sm">
+		<img
+			class="h-10 w-auto mx-auto my-4 fill-black"
+			src="/assets/images/logo.svg"
+			alt="Aster Pillbox"
+		/>
 		<form class="space-y-6" action="#" method="POST">
 			<div>
 				<label
@@ -52,7 +57,7 @@
 					type="submit"
 					class="flex w-full justify-center rounded-md bg-blue-600 px-3 py-1.5 text-sm font-semibold leading-6 text-white shadow-sm hover:bg-blue-700 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-blue-700"
 				>
-					Sign in
+					Entrar
 				</button>
 			</div>
 		</form>
