fix: alterado o nome da rota para recover-password.

--- a/src/app/modules/login/login.component.html
+++ b/src/app/modules/login/login.component.html
@@ -64,7 +64,7 @@
 
 		<div class="mt-10 text-center text-sm">
 			<a
-				href="forgot-password"
+				href="recover-password"
 				class="font-semibold text-blue-700 hover:text-blue-600"
 				>Esqueceu a senha?</a
 			>
