--- a/src/app/modules/recover-password/recover-password.component.html
+++ b/src/app/modules/recover-password/recover-password.component.html
@@ -10,7 +10,7 @@
 	<div class="mt-10 lg:mx-auto lg:w-full lg:max-w-sm">
 		<img
 			class="h-10 w-auto mx-auto my-4 fill-black"
-			src="/assets/images/logo.svg"
+			src="/assets/images/logo-dark.png"
 			alt="Aster Pillbox"
 		/>
 		<div class="my-4 text-left">
