feat: adicionado o routerModule para utilziar no html o routerlink.

--- a/src/app/modules/login/login.component.html
+++ b/src/app/modules/login/login.component.html
@@ -64,7 +64,8 @@
 
 		<div class="mt-10 text-center text-sm">
 			<a
-				href="recover-password"
+				routerLink="/recover-password"
+				routerLinkActive="active"
 				class="font-semibold text-blue-700 hover:text-blue-600"
 				>Esqueceu a senha?</a
 			>
@@ -72,7 +73,8 @@
 		<p class="mt-10 text-center text-sm text-gray-500">
 			Não tem uma conta?
 			<a
-				href="register"
+				routerLink="/register"
+				routerLinkActive="active"
 				class="font-semibold leading-6 text-blue-700 hover:text-blue-600"
 				>Clique aqui para se cadastrar</a
 			>
