feat: adicionado o routerModule para utilziar no html o routerlink.

--- a/src/app/modules/recover-password/recover-password.component.html
+++ b/src/app/modules/recover-password/recover-password.component.html
@@ -62,7 +62,8 @@
 		<p class="mt-10 text-center text-sm text-gray-500">
 			Voltar para o
 			<a
-				href="login"
+				routerLink="/login"
+				routerLinkActive="active"
 				class="font-semibold leading-6 text-blue-700 hover:text-blue-600"
 				>Login.</a
 			>
