--- a/src/app/modules/register/register.component.html
+++ b/src/app/modules/register/register.component.html
@@ -22,29 +22,13 @@
 				minuto.
 			</p>
 		</div>
-		<form class="space-y-6" action="#" method="POST">
-			<!-- Name -->
-			<div>
-				<div>
-					<label
-						for="name"
-						class="block text-sm font-semibold leading-6 text-gray-900"
-						>Nome Completo</label
-					>
-				</div>
-				<div class="mt-2">
-					<input
-						id="name"
-						name="name"
-						type="text"
-						autocomplete="name"
-						placeholder="Digite seu nome completo"
-						required
-						class="block w-full rounded-md py-2 px-2 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:to-blue-700 sm:text-sm sm:leading-5"
-					/>
-				</div>
-			</div>
 
+		<!-- Register Form -->
+		<form
+			class="space-y-6"
+			[formGroup]="registerForm"
+			(ngSubmit)="onSubmitRegisterForm()"
+		>
 			<!-- Email Address -->
 			<div>
 				<div>
@@ -61,6 +45,7 @@
 						type="text"
 						autocomplete="email"
 						placeholder="Digite seu email"
+						formControlName="email"
 						required
 						class="block w-full rounded-md py-2 px-2 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:to-blue-700 sm:text-sm sm:leading-5"
 					/>
@@ -82,6 +67,7 @@
 						name="password"
 						type="password"
 						placeholder="Digite uma senha"
+						formControlName="password"
 						required
 						class="block w-full rounded-md py-2 px-2 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:to-blue-700 sm:text-sm sm:leading-5"
 					/>
@@ -101,7 +87,10 @@
 					class="ml-2 block text-sm font-semibold leading-5 text-gray-900"
 				>
 					Eu aceito os
-					<a href="#" class="text-blue-600 hover:text-blue-500"
+					<a
+						routerLink="/terms-and-conditions"
+						routerLinkActive="true"
+						class="text-blue-600 hover:text-blue-500"
 						>termos e condições</a
 					>
 				</label>
@@ -126,7 +115,8 @@
 		<p class="mt-10 text-center text-sm text-gray-500">
 			Já tem uma conta?
 			<a
-				href="login"
+				routerLink="/login"
+				routerLinkActive="true"
 				class="font-semibold leading-6 text-blue-700 hover:text-blue-600"
 				>Entrar.</a
 			>
