feat: fazendo que o checkbox seja obrigatorio.

--- a/src/app/modules/register/register.component.html
+++ b/src/app/modules/register/register.component.html
@@ -80,6 +80,8 @@
 					type="checkbox"
 					name="terms"
 					id="terms"
+					formControlName="terms"
+					required
 					class="h-4 w-4 text-blue-600 focus:ring-blue-500 border-gray-300 rounded"
 				/>
 				<label
