--- a/src/app/modules/login/login.component.html
+++ b/src/app/modules/login/login.component.html
@@ -13,7 +13,14 @@
 			src="/assets/images/logo-dark.png"
 			alt="Aster Pillbox"
 		/>
-		<form class="space-y-6" action="#" method="POST">
+
+		<!-- Form -->
+		<form
+			class="space-y-6"
+			[formGroup]="loginForm"
+			(ngSubmit)="onSubmitLoginForm()"
+		>
+			<!-- Email -->
 			<div>
 				<label
 					for="email"
@@ -22,10 +29,12 @@
 				>
 				<div class="mt-2">
 					<input
-						id="email"
+						id="email-login"
 						name="email"
-						type="email"
+						type="text"
 						autocomplete="email"
+						placeholder="Digite seu email"
+						formControlName="email"
 						required
 						class="block w-full rounded-md py-2 px-2 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:to-blue-700 sm:text-sm sm:leading-5"
 					/>
@@ -46,6 +55,7 @@
 						name="password"
 						type="password"
 						autocomplete="password"
+						formControlName="password"
 						required
 						class="block w-full rounded-md py-2 px-2 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:to-blue-700 sm:text-sm sm:leading-5"
 					/>
