feat: no html adicionado o required para o checkbox, criado service para criar token de ativacao de conta, adicionado o campo de checkbox no formGroup e usando o switchMap para lidar com requisicoes aninhadas.

--- a/src/app/modules/register/register.component.html
+++ b/src/app/modules/register/register.component.html
@@ -80,7 +80,7 @@
 					type="checkbox"
 					name="terms"
 					id="terms"
-					formControlName="terms"
+					formControlName="terms_and_conditions"
 					required
 					class="h-4 w-4 text-blue-600 focus:ring-blue-500 border-gray-300 rounded"
 				/>
