feat: adicionado o componente de loading quando feito o submit.

--- a/src/app/modules/register/register.component.html
+++ b/src/app/modules/register/register.component.html
@@ -1,4 +1,5 @@
 <div class="flex h-screen flex-row justify-center items-center">
+	<app-loader [isLoading]="loading"></app-loader>
 	<div class="w-0 h-0 lg:w-7/12 lg:h-screen">
 		<img
 			class="h-full w-full"
