feat: adicionado o componente de toast no dashboard, mais ainda precisa fazer as configuracoes necessarias.

--- a/src/app/modules/dashboard/dashboard.component.html
+++ b/src/app/modules/dashboard/dashboard.component.html
@@ -1,5 +1,6 @@
 <app-dashboard-layout>
 	<div class="grid-container">
 		<h1 class="mat-h1">Dashboard</h1>
+		<ng-template #toastContainer></ng-template>
 	</div>
 </app-dashboard-layout>
