fix: apenas melhorado o entendimento do que fazer.

--- a/src/app/modules/page-check-your-email/page-check-your-email.component.html
+++ b/src/app/modules/page-check-your-email/page-check-your-email.component.html
@@ -10,12 +10,13 @@
 		<h1
 			class="mt-4 text-3xl font-bold tracking-tight text-gray-900 sm:text-5xl"
 		>
-			Verifique seu email!
+			Confirmação de e-mail
 		</h1>
 		<p class="mt-6 text-base leading-7 text-gray-600">
-			Mandamos um email para você para verificar seu email e assim ativar
-			sua conta.
-			<br />O link no email expira em 24 horas.
+			Enviamos um e-mail para você com um link para ativar sua conta.
+			<br />
+			Por favor, verifique sua caixa de entrada ou spam e clique no link
+			para concluir o processo. <br />O link expirará em 24 horas.
 		</p>
 		<div class="mt-10 flex items-center justify-center gap-x-6">
 			<a
