feat: criado uma condicao de verificar se foi encaminhado o email se caso for nao vai aparecer o button de reenviar. Caso precisar reenviar, vai aparecer o button.

--- a/src/app/modules/page-check-your-email/page-check-your-email.component.html
+++ b/src/app/modules/page-check-your-email/page-check-your-email.component.html
@@ -2,6 +2,7 @@
 	class="grid h-screen place-items-center bg-white px-6 py-24 sm:py-32 lg:px-8"
 >
 	<div class="text-center">
+		<app-loader [isLoading]="loader"></app-loader>
 		<!-- <img
 			src="../../../assets/images/image-email.png"
 			class="bg-blue-400 h-32 w-32 mx-auto my-5"
@@ -25,12 +26,16 @@
 				class="rounded-md bg-blue-600 px-3.5 py-2.5 text-sm font-semibold text-white shadow-sm hover:bg-blue-700 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-blue-600"
 				>Voltar para a página inicial</a
 			>
-			<a
-				routerLink="/resend-email-token"
+			@if (!sendedEmail) {
+			<button
+				(click)="resendEmail()"
 				routerLinkActive="active"
+				type="button"
 				class="rounded-md bg-blue-600 px-3.5 py-2.5 text-sm font-semibold text-white shadow-sm hover:bg-blue-700 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-blue-600"
-				>Reenviar email</a
 			>
+				Reenviar email
+			</button>
+			}
 			<a
 				routerLink="/contact"
 				routerLinkActive="active"
