--- a/src/app/modules/login/login.component.html
+++ b/src/app/modules/login/login.component.html
@@ -56,6 +56,7 @@
 						type="password"
 						autocomplete="password"
 						formControlName="password"
+						placeholder="Digite sua senha"
 						required
 						class="block w-full rounded-md py-2 px-2 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:to-blue-700 sm:text-sm sm:leading-5"
 					/>
