--- a/src/app/modules/recover-password/recover-password.component.html
+++ b/src/app/modules/recover-password/recover-password.component.html
@@ -22,7 +22,11 @@
 				um email com as instruções para resetar sua senha.
 			</p>
 		</div>
-		<form class="space-y-6" action="#" method="POST">
+		<form
+			class="space-y-6"
+			[formGroup]="resetPassword"
+			(ngSubmit)="onSubmitResetPassword()"
+		>
 			<div>
 				<div>
 					<label
@@ -38,6 +42,7 @@
 						type="text"
 						autocomplete="email"
 						placeholder="Digite seu e-mail"
+						formControlName="email"
 						required
 						class="block w-full rounded-md py-2 px-2 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:to-blue-700 sm:text-sm sm:leading-5"
 					/>
