--- a/src/app/modules/login/login.component.html
+++ b/src/app/modules/login/login.component.html
@@ -14,6 +14,15 @@
 			alt="Aster Pillbox"
 		/>
 
+		<div class="my-4 mt-4 text-left">
+			<h3 class="text-xl font-semibold leading-6 text-gray-900">
+				Entrar na sua conta
+			</h3>
+			<p class="mt-2 text-sm font-light leading-5 text-gray-600">
+				Digite seu e-mail e senha para entrar na sua conta.
+			</p>
+		</div>
+
 		<!-- Form -->
 		<form
 			class="space-y-6"
