fix: utilizando na pagina loader e dialog para ter interacao com o usuario.

--- a/src/app/modules/page-confirm-recover-password/page-confirm-recover-password.component.html
+++ b/src/app/modules/page-confirm-recover-password/page-confirm-recover-password.component.html
@@ -1,4 +1,6 @@
 <div class="flex h-screen flex-row justify-center items-center">
+	<app-loader [isLoading]="showLoader"></app-loader>
+	<ng-container #dialogContainer></ng-container>
 	<div class="lg:mx-auto lg:w-full lg:max-w-sm">
 		<img
 			class="h-10 w-auto mx-auto my-4 fill-black"
