fix: adicionado autocomplete pro password

--- a/src/app/modules/register/register.component.html
+++ b/src/app/modules/register/register.component.html
@@ -67,6 +67,7 @@
 						id="password"
 						name="password"
 						type="password"
+						autocomplete="current-password"
 						placeholder="Digite uma senha"
 						formControlName="password"
 						required
