--- a/src/app/modules/login/login.component.html
+++ b/src/app/modules/login/login.component.html
@@ -1,4 +1,6 @@
 <div class="flex h-screen flex-row justify-center items-center">
+	<app-loader [isLoading]="showLoader"></app-loader>
+	<ng-template #dialogContainer></ng-template>
 	<div class="w-0 h-0 lg:w-7/12 lg:h-screen">
 		<img
 			class="h-full w-full"
