refactor: nao esta sendo mais utilizado o gridview e agora utilizando o flex-box.

--- a/src/app/modules/dashboard/dashboard.component.css
+++ b/src/app/modules/dashboard/dashboard.component.css
@@ -1,7 +1,7 @@
-.grid-container {
+.container {
 	padding: 16px 20px;
 	height: auto;
-	width: auto;
+	width: calc(100vw - 260px);
 	overflow: scroll;
 }
 
