--- a/src/app/modules/dashboard/dashboard.component.html
+++ b/src/app/modules/dashboard/dashboard.component.html
@@ -1,6 +1,4 @@
-<app-dashboard-layout>
-	<div class="grid-container">
-		<h1 class="mat-h1">Dashboard</h1>
-		<ng-template #toastContainer></ng-template>
-	</div>
-</app-dashboard-layout>
+<div class="container">
+	<h1 class="">Dashboard</h1>
+	<ng-template #toastContainer></ng-template>
+</div>
