--- a/src/app/shared/components/sidenav-dashboard/sidenav-dashboard.component.html
+++ b/src/app/shared/components/sidenav-dashboard/sidenav-dashboard.component.html
@@ -1,4 +1,4 @@
-<div class="grid-sidenav-container">
+<div class="sidenav-container">
 	<div class="sidenav-content">
 		<app-button-menu
 			[description]="'Dashboard'"
