--- a/src/app/shared/components/sidenav-title-dashboard/sidenav-title-dashboard.component.html
+++ b/src/app/shared/components/sidenav-title-dashboard/sidenav-title-dashboard.component.html
@@ -1,4 +1,4 @@
-<div class="grid-sidenav-title">
+<div class="sidenav-title">
 	<a href="dashboard">
 		<img src="assets/images/logo.png" alt="logo" srcset="" />
 	</a>
