--- a/src/app/shared/components/toolbar-dashboard/toolbar-dashboard.component.html
+++ b/src/app/shared/components/toolbar-dashboard/toolbar-dashboard.component.html
@@ -1,4 +1,4 @@
-<div class="grid-toolbar-container">
+<div class="toolbar-container">
 	<div class="toolbar-group-start">
 		<button
 			mat-icon-button
