--- a/src/app/shared/components/sidenav-title-dashboard/sidenav-title-dashboard.component.css
+++ b/src/app/shared/components/sidenav-title-dashboard/sidenav-title-dashboard.component.css
@@ -1,14 +1,13 @@
-.grid-sidenav-title {
-	grid-area: ST;
+.sidenav-title {
 	display: flex;
 	justify-content: center;
 	align-items: center;
 	background-color: #313a46;
 	text-align: center;
-	height: 100%;
-	width: 100%;
+	height: 70px;
+	width: 260px;
 }
 
-.grid-sidenav-title img {
+.sidenav-title img {
 	height: 40px;
 }
