--- a/src/app/shared/components/toolbar-dashboard/toolbar-dashboard.component.css
+++ b/src/app/shared/components/toolbar-dashboard/toolbar-dashboard.component.css
@@ -1,11 +1,12 @@
-.grid-toolbar-container {
-	grid-area: TB;
+.toolbar-container {
 	display: flex;
 	flex-direction: row;
-	flex-wrap: wrap;
 	align-items: center;
 	justify-content: space-between;
-	height: 100%;
+	height: 70px;
+	padding: 0px 16px;
+	width: calc(100vw - 260px);
+	box-sizing: border-box;
 	background-color: #313a46;
 	color: white;
 	box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.85);
@@ -39,8 +40,9 @@ h1 {
 	display: flex;
 	flex-direction: row;
 	align-items: center;
-	justify-content: flex-start;
+	justify-content: flex-end;
 	height: 100%;
+	width: max-content;
 	margin-right: 16px;
 }
 
