--- a/src/app/layouts/dashboard-layout/dashboard-layout.component.html
+++ b/src/app/layouts/dashboard-layout/dashboard-layout.component.html
@@ -1,6 +1,10 @@
-<div class="grid-template-container">
-	<app-sidenav-title-dashboard></app-sidenav-title-dashboard>
-	<app-toolbar-dashboard></app-toolbar-dashboard>
-	<app-sidenav-dashboard></app-sidenav-dashboard>
-	<ng-content></ng-content>
+<div class="h-screen w-screen">
+	<div class="flex flex-row">
+		<app-sidenav-title-dashboard></app-sidenav-title-dashboard>
+		<app-toolbar-dashboard></app-toolbar-dashboard>
+	</div>
+	<div class="flex flex-row">
+		<app-sidenav-dashboard></app-sidenav-dashboard>
+		<router-outlet></router-outlet>
+	</div>
 </div>
