--- a/src/app/modules/dashboard/components/card-info-user/card-info-user.component.html
+++ b/src/app/modules/dashboard/components/card-info-user/card-info-user.component.html
@@ -1,4 +1,6 @@
-<div class="container text-gray-900">
+<div
+	class="container-card-info-user flex flex-col items-center justify-center text-gray-900"
+>
 	<img
 		src="{{ user.image }}"
 		alt="Imagem do usuário"
