--- a/src/app/modules/dashboard/components/card-reminder/card-reminder.component.css
+++ b/src/app/modules/dashboard/components/card-reminder/card-reminder.component.css
@@ -1,50 +1,39 @@
 /* Card */
-.card {
-	display: flex;
-	flex-grow: 1; /* Ocupa o espaço restante */
-	flex-direction: column;
-	justify-content: center;
-	align-items: center;
-
+.card-reminder {
 	position: relative;
 
-	background-color: chartreuse;
+	background-color: white;
 	border-radius: 20px;
 	border: 1px solid gray;
 	box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-	width: 100%;
+	/* width - sidenav- padding left - userinfo - gap - padding right */
+	/* width: calc(100vw - 260px - 16px - 300px - 16px - 16px); */
+	width: 300px;
 	height: 300px;
-}
-
-/* CardHeader */
-.card-header {
-	display: flex;
-	justify-content: space-between;
-}
-
-/* CardTitle */
-.card-title {
-	font-size: 16px; /* Substituindo theme.font.sizes.small */
-	margin: 0;
-	color: #000; /* Substituindo theme.colors.deepBlack */
 }
 
 /* ActionButton */
 .action-button {
-	size: 30px;
+	display: fixed;
+	padding: 8px 16px;
 	border: none;
-	background-color: transparent;
 	cursor: pointer;
+	position: absolute;
+	top: 0;
+	right: 0;
+	margin: 8px;
+	filter: invert(100%);
 }
 
 .action-button:hover {
-	opacity: 0.8;
+	opacity: 0.6;
 }
 
 /* CardBody */
 .card-body {
 	margin-top: 20px;
 	height: calc(100% - 40px);
+	width: 100%;
 	overflow: scroll;
 	overflow-x: hidden;
 
