fix: alterado a rota.

--- a/src/app/modules/dashboard/components/card-reminder/card-reminder.component.html
+++ b/src/app/modules/dashboard/components/card-reminder/card-reminder.component.html
@@ -4,7 +4,7 @@
 	</div>
 	<button
 		class="action-button"
-		[routerLink]="'/reminder'"
+		routerLink="'/dashboard/reminder'"
 		routerLinkActive="activate"
 	>
 		<app-icon
