--- a/src/app/modules/dashboard/components/card-info-user/card-info-user.component.css
+++ b/src/app/modules/dashboard/components/card-info-user/card-info-user.component.css
@@ -5,8 +5,10 @@
 	border-radius: 20px;
 	border: 1px solid gray;
 	box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-	width: 300px;
-	height: 300px;
+	/* width: 300px;
+	height: 300px; */
+	width: 100%;
+	height: 100%;
 }
 
 .card-info-user-image {
