--- a/src/app/modules/dashboard/components/card-reminder/card-reminder.component.css
+++ b/src/app/modules/dashboard/components/card-reminder/card-reminder.component.css
@@ -8,8 +8,10 @@
 	box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 	/* width - sidenav- padding left - userinfo - gap - padding right */
 	/* width: calc(100vw - 260px - 16px - 300px - 16px - 16px); */
-	width: 300px;
-	height: 300px;
+	/* width: 300px;
+	height: 300px; */
+	width: 100%;
+	height: 100%;
 }
 
 /* ActionButton */
