feat: criado componente calendar week e do week item e ja adicionado na tela.

--- a/src/app/modules/dashboard/dashboard.component.html
+++ b/src/app/modules/dashboard/dashboard.component.html
@@ -7,6 +7,6 @@
 	<div class="grid grid-cols-12 gap-4">
 		<app-card-info-user class="col-span-3 h-72"></app-card-info-user>
 		<app-card-reminder class="col-span-3 h-72"></app-card-reminder>
-		<app-card-reminder class="col-span-6 h-72"></app-card-reminder>
+		<app-calendar-week class="col-span-6 h-72"></app-calendar-week>
 	</div>
 </div>
