--- a/src/app/modules/dashboard/components/calendar-week/calendar-week.component.css
+++ b/src/app/modules/dashboard/components/calendar-week/calendar-week.component.css
@@ -3,12 +3,12 @@
 	display: flex;
 	flex-direction: column;
 	align-items: center;
-	background-color: #fff; /* Substitua pela sua cor de fundo */
+	background-color: #fff;
 	border-radius: 20px;
-	border: 1px solid #ddd; /* Substitua pela sua cor de borda */
+	border: 1px solid #ddd;
 	box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-	color: #212529; /* Substitua pela sua cor de texto */
-	padding: 20px;
+	color: #212529;
+	padding: 16px;
 	width: 100%;
 	height: 100%;
 }
