--- a/src/app/modules/dashboard/components/card-info-user/card-info-user.component.css
+++ b/src/app/modules/dashboard/components/card-info-user/card-info-user.component.css
@@ -3,7 +3,7 @@
 
 	background-color: white;
 	border-radius: 20px;
-	border: 1px solid gray;
+	border: 1px solid #ddd;
 	box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 	/* width: 300px;
 	height: 300px; */
