--- a/src/app/modules/dashboard/components/card-reminder/card-reminder.component.css
+++ b/src/app/modules/dashboard/components/card-reminder/card-reminder.component.css
@@ -4,7 +4,7 @@
 
 	background-color: white;
 	border-radius: 20px;
-	border: 1px solid gray;
+	border: 1px solid #ddd;
 	box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 	/* width - sidenav- padding left - userinfo - gap - padding right */
 	/* width: calc(100vw - 260px - 16px - 300px - 16px - 16px); */
