feat: criado componente card medications e ja adicionado na tela.

--- a/src/app/modules/dashboard/dashboard.component.html
+++ b/src/app/modules/dashboard/dashboard.component.html
@@ -9,4 +9,8 @@
 		<app-card-reminder class="col-span-3 h-72"></app-card-reminder>
 		<app-calendar-week class="col-span-6 h-72"></app-calendar-week>
 	</div>
+	<div class="grid grid-cols-12 gap-4 mt-4">
+		<app-card-medications class="col-span-6 h-96"></app-card-medications>
+		<app-calendar-week class="col-span-6 h-96"></app-calendar-week>
+	</div>
 </div>
