feat: criado componente card medication e ja adicionado na tela.

--- a/src/app/modules/dashboard/dashboard.component.html
+++ b/src/app/modules/dashboard/dashboard.component.html
@@ -11,6 +11,8 @@
 	</div>
 	<div class="grid grid-cols-12 gap-4 mt-4">
 		<app-card-medications class="col-span-6 h-96"></app-card-medications>
-		<app-calendar-week class="col-span-6 h-96"></app-calendar-week>
+		<app-card-medication-pillbox
+			class="col-span-6 h-96"
+		></app-card-medication-pillbox>
 	</div>
 </div>
